Fix Path to URL conversion for windows users (#9989)
* Fix Path to URL conversion for windows users